--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aplayer/dist/APlayer.min.css">
     <script src="https://cdn.jsdelivr.net/npm/aplayer/dist/APlayer.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/Moe-dog/prprpr.love@0.6/statics/js/aplayer.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/color-thief-don@2.0.2/src/color-thief.js"></script>
 <script src="https://v1.hitokoto.cn/?encode=js&select=%23hitokoto" defer></script>
 <style>
     h1 {
@@ -111,9 +112,80 @@ body:before{
   z-index: -1;
   content: "";
   position: fixed;
-  background: url(https://api.paugram.com/wallpaper/) center/cover;
+  background: url(https://api.paugram.com/wallpaper?source=gt) center/cover;
 }
 </style>
+      <style type="text/css">
+            .aplayer.aplayer-fixed {
+                text-transform: uppercase;
+                border-radius: 0 15px 15px 0;
+                max-width: 418px;
+                padding: 10px 10px 0 10px;
+                left: 0;
+            }
+
+            .aplayer.aplayer-fixed .aplayer-list {
+                border: none;
+                margin-bottom: 86px;
+            }
+
+            .aplayer.aplayer-fixed .aplayer-body {
+                background: none;
+            }
+
+            .aplayer.aplayer-fixed .aplayer-miniswitcher {
+                opacity: .5;
+                overflow: hidden;
+                border-radius: 0 15px 15px 0;
+            }
+
+            .aplayer.aplayer-fixed:hover .aplayer-miniswitcher {
+                opacity: .63;
+
+            }
+
+            .aplayer.aplayer-withlist.aplayer-fixed.aplayer-narrow,
+            .aplayer.aplayer-withlist.aplayer-fixed.aplayer-narrow .aplayer-body {
+                left: -66px !important;
+            }
+
+            .aplayer.aplayer-withlist.aplayer-fixed.aplayer-narrow:hover .aplayer-body {
+                left: 0 !important;
+            }
+
+            #landlord {
+                left: 90px;
+            }
+
+            .aplayer {
+                z-index: 10001 !important;
+                background: rgba(255, 255, 255, .63);
+            }
+
+            .aplayer .aplayer-info {
+                margin-left: 86px;
+                height: 86px;
+                padding-top: 20px;
+            }
+
+            .aplayer .aplayer-pic {
+                height: 86px;
+                width: 86px;
+            }
+
+          
+            .aplayer .aplayer-notice {
+                display: none;
+            }
+
+            .aplayer.aplayer-fixed .aplayer-lrc {
+                background: rgba(0, 0, 0, 0.5);
+                margin: auto;
+                bottom: 0;
+                max-width: 800px;
+                border-radius: 10px;
+            }
+        </style>
 </head>
 <body>
   <!-- don't remove this part start -->
@@ -121,8 +193,7 @@ body:before{
 
 <h3>🍭 Cisco Club is your warm home. Welcome to join us</h3>
 <p><meting-js                 
-   server="netease"              
-  listFolded:"false"       
+   server="netease"                  
    type="playlist"                 
    id="7037065270"                 
    order="random"
@@ -143,7 +214,7 @@ body:before{
    server="netease"          
    fixed="true"                  
    type="playlist"                 
-   id="7037065270"                 
+   id="2142075259"                 
    order="random"
    list-folded="ture">
    </meting-js>
