--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ body:before{
   <!-- don't remove this part start -->
   <div id="app"><div class="landing"><h1>Cisco Club</h1>
 
-<h3>🍭 Cisco Club is your warm home. Welcome to join us</h3>
+<h3>🍭 在思科社，用代码改变世界。</h3>
 <p><meting-js                 
    server="netease"                  
    type="playlist"                 
