--- a/index.html
+++ b/index.html
@@ -4,21 +4,17 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
   <title>Cisco Club</title>
+  <link rel="icon" type="image/x-icon" href="http://q1.qlogo.cn/g?b=qq&nk=3025317494&s=640">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docute@3.4.12/dist/docute.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docute@3.4.12/dist/theme-github.css">
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script type="text/javascript" async="" src="https://www.google-analytics.com/analytics.js"></script><script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-48084758-8"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
-
-    gtag('config', 'UA-48084758-8');
-  </script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aplayer@1.10.0/dist/APlayer.min.css">
-  <script src="https://cdn.jsdelivr.net/npm/hls.js/dist/hls.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/aplayer@1.10.0/dist/APlayer.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/color-thief-don@2.0.2/src/color-thief.js"></script>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aplayer/dist/APlayer.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/aplayer/dist/APlayer.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/Moe-dog/prprpr.love@0.6/statics/js/aplayer.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/color-thief-don@2.0.2/src/color-thief.js"></script>
+<script src="https://v1.hitokoto.cn/?encode=js&select=%23hitokoto" defer></script>
   <style>
     body {
       text-rendering: auto;
@@ -34,11 +30,6 @@
       z-index: 90;
     }
   </style>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aplayer/dist/APlayer.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/aplayer/dist/APlayer.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/Moe-dog/prprpr.love@0.6/statics/js/aplayer.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/color-thief-don@2.0.2/src/color-thief.js"></script>
-<script src="https://v1.hitokoto.cn/?encode=js&select=%23hitokoto" defer></script>
 <style>
     h1 {
         margin: 0;
@@ -50,7 +41,6 @@
 
     h3 {
         margin-top: 20px;
-        color: #999;
         font-weight: normal;
         letter-spacing: 1px;
     }
@@ -112,7 +102,7 @@ body:before{
   z-index: -1;
   content: "";
   position: fixed;
-  background: url(https://api.paugram.com/wallpaper?source=gt) center/cover;
+  background: url(http://101.35.150.209/api) center/cover;
 }
 </style>
       <style type="text/css">
@@ -191,7 +181,7 @@ body:before{
   <!-- don't remove this part start -->
   <div id="app"><div class="landing"><h1>Cisco Club</h1>
 
-<h3>🍭 在思科社，用代码改变世界。</h3>
+<h3>🍭At Cisco, change the world with code.</h3>
 <p><meting-js                 
    server="netease"                  
    type="playlist"                 
