--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ body:before{
   z-index: -1;
   content: "";
   position: fixed;
-  background: url(http://101.35.150.209/api) center/cover;
+  background: url(https://api.paugram.com/wallpaper?source=gt) center/cover;
 }
 </style>
       <style type="text/css">
