--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@ body:before{
       联系我们
     </a>
 
-    <a class="landing-button" router-link="/home">
+    <a class="landing-button" router-link="/home" href="about.html">
         成员介绍
     </a>
 </div>
