--- a/about.html
+++ b/about.html
@@ -11,19 +11,19 @@
   <link  rel ="icon"  href ="images/icon.png" >
   <link  rel ="shortcut icon"  href ="images/icon.png" > 
   <!--bootstrap css-->
-  <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/yarnson/ciscon@1.0/css/bootstrap.min.css" />
   <!--owl carousel css-->
-  <link rel="stylesheet" type="text/css" href="css/owl.carousel.min.css" />
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/yarnson/ciscon@1.0/css/owl.carousel.min.css" />
   <!--animated headline css-->
-  <link rel="stylesheet" type="text/css" href="css/animated-headline.css" />
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/yarnson/ciscon@1.0/css/animated-headline.css" />
   <!--icofont css-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css">
   <!--animate css-->
-  <link rel="stylesheet" type="text/css" href="css/animate.css" />
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/yarnson/ciscon@1.0/css/animate.css" />
   <!--main css-->
-  <link rel="stylesheet" type="text/css" href="css/style.css" />
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/yarnson/ciscon@1.0/css/style.css" />
   <!--responsive css-->
-  <link rel="stylesheet" type="text/css" href="css/responsive.css" />
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/yarnson/ciscon@1.0/css/responsive.css" />
   <div id="cc-myssl-id" style="position: fixed;right: 0;bottom: 0;width: 65px;height: 65px;z-index: 99;"></div>
   <!--aplayer css-->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aplayer/dist/APlayer.min.css">
@@ -118,7 +118,7 @@
     <nav class="navbar navbar-expand-lg">
      <div class="container">
       <!--logo-->
-      <a class="navbar-brand" href="index.html"><img src="png/logo.png" alt="logo" width="252" height="65" /></a>
+      <a class="navbar-brand" href="index.html"><img src="https://cdn.jsdelivr.net/gh/yarnson/ciscon@1.0/png/logo.png" alt="logo" width="252" height="65" /></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation"><span class="icofont icofont-navigation-menu"></span></button>
       <div class="collapse navbar-collapse" id="navbarContent">
        <ul class="navbar-nav ml-auto">
@@ -186,8 +186,8 @@
         <li><span>Email:</span>1544982980@qq.com</li>
 		   <li><span>Email</span>3025317494@qq.com</li>
        </ul>
-       <a href="http://wpa.qq.com/msgrd?v=3&uin=1544982980&site=qq&menu=yes">联系社长
-       <a href="http://wpa.qq.com/msgrd?v=3&uin=3025317494&site=qq&menu=yes">联系副社长</a>
+       <a href="http://wpa.qq.com/msgrd?v=3&uin=2775198814&site=qq&menu=yes">联系社长
+       <a href="http://wpa.qq.com/msgrd?v=3&uin=2775198814&site=qq&menu=yes">联系副社长</a>
       </div>
      </div>
      <!--end about content-->
@@ -446,29 +446,29 @@
   </footer>
   <!--end footer-->
   <!--jQuery js-->
-  <script src="js/jquery-3.3.1.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/yarnson/ciscon@1.0/js/jquery-3.3.1.min.js"></script>
   <!--proper js-->
-  <script src="js/popper.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/yarnson/ciscon@1.0/js/popper.min.js"></script>
   <!--bootstrap js-->
-  <script src="js/bootstrap.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/yarnson/ciscon@1.0/js/bootstrap.min.js"></script>
   <!--owl carousel js-->
-  <script src="js/owl.carousel.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/yarnson/ciscon@1.0/js/owl.carousel.min.js"></script>
   <!--animated headline js-->
-  <script src="js/animated-headline.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/yarnson/ciscon@1.0/js/animated-headline.js"></script>
   <!--counter js-->
-  <script src="js/waypoints.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/yarnson/ciscon@1.0/js/waypoints.js"></script>
   <script src="js/counterup.min.js"></script>
   <!--particle js-->
-  <script src="js/particles.min.js"></script>
-  <script src="js/particles-app.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/yarnson/ciscon@1.0/js/particles.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/yarnson/ciscon@1.0/js/particles-app.js"></script>
   <!--scrollIt js-->
-  <script src="js/scrollIt.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/yarnson/ciscon@1.0/js/scrollIt.min.js"></script>
   <!--circle progress js-->
-  <script src="js/circle-progress.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/yarnson/ciscon@1.0/js/circle-progress.min.js"></script>
   <!--ajax contact js-->
-  <script src="js/contact.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/yarnson/ciscon@1.0/js/contact.js"></script>
   <!--main js-->
-  <script src="js/custom.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/yarnson/ciscon@1.0/js/custom.js"></script>
     <!--meting js-->
  <script src="https://cdn.jsdelivr.net/npm/meting@2/dist/Meting.min.js"></script>
  </body>
