--- a/about.html
+++ b/about.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="zh">
 <head>
@@ -333,7 +334,7 @@
      <!--start testimonial single-->
      <div class="testimonial-single">
       <div class="testimonial-details">
-       <p>来自23计算机1班，思科社副社长，创始人之一，全专业学习委员之首。喜欢品味各类经典的文学作品和电影，最喜欢的小说有《百年孤独》《霍乱时期的爱情》，马尔克斯是他最喜欢的作家。同时也是团队不可缺少的主心骨，曾经是网络安全小组成员。为人谦和，善良，是团队里最能说会道的一个。就是不擅长与陌生人接触</p>
+       <p>来自23计算机1班，思科社副社长，创始人之一。喜欢品味各类经典的文学作品和电影，最喜欢的小说有《百年孤独》《霍乱时期的爱情》，马尔克斯是他最喜欢的作家。同时也是团队不可缺少的主心骨，曾经是网络安全小组成员。为人谦和，善良，是团队里最能说会道的一个。就是不擅长与陌生人接触</p>
        <h5>YarnSon</h5>
        <h6>思科社副社长</h6>
        <div class="quote-icon">
@@ -409,7 +410,7 @@
 		<!--start testimonial single-->
      <div class="testimonial-single">
       <div class="testimonial-details">
-       <p>来自23计算机2班，是全计算机专业顶尖人才之一。最精通的项目于有综合布线，组装与维修。擅长写一些文学文案。是计算机专业当代“鲁迅”</p>
+       <p>来自23计算机2班，是全计算机专业顶尖人才之一。最精通的项目于有综合布线，组装与维修。擅长写一些文学文案。是计算机专业当代“鲁迅”为人谦和善良，对于计算机的硬件有自己独特的见解。为人善良，有耐心，是个成熟的男孩。他比较神秘，在例行社团活动不会出现，是全社团最神秘的男人。</p>
        <h5>向鹏飞</h5>
        <h6>社团成员</h6>
        <div class="quote-icon">
@@ -418,6 +419,36 @@
       </div>
       <div class="client-img">
        <img src="https://thirdqq.qlogo.cn/g?b=qq&nk=3140273549&s=640" class="img-fluid" alt="" />
+      </div>
+     </div>
+     <!--end testimonial single-->
+ 		<!--start testimonial single-->
+     <div class="testimonial-single">
+      <div class="testimonial-details">
+       <p>来自23计算机2班，新生代计算机少年之一，精通综合布线、组装与维修等。个人比较温柔、耐心、善良，他不会的题他会慢慢研究，不会放弃。计算机当代“苏轼”。</p>
+       <h5>东坡居士</h5>
+       <h6>社团成员</h6>
+       <div class="quote-icon">
+        <i class="icofont-quote-right"></i>
+       </div>
+      </div>
+      <div class="client-img">
+       <img src="https://thirdqq.qlogo.cn/g?b=qq&nk=3184708139&s=640" class="img-fluid" alt="" />
+      </div>
+     </div>
+     <!--end testimonial single-->
+     	<!--start testimonial single-->
+     <div class="testimonial-single">
+      <div class="testimonial-details">
+       <p>24计4罗志海担任思科社摄影师：精通无人机相机一系列操作会pr.ae我比较幽默我的优点是敢于挑战新事物，勇于认错，严格要求自己，做事认真。</p>
+       <h5>罗志海</h5>
+       <h6>摄影师</h6>
+       <div class="quote-icon">
+        <i class="icofont-quote-right"></i>
+       </div>
+      </div>
+      <div class="client-img">
+       <img src="https://thirdqq.qlogo.cn/g?b=qq&nk=2913706891&s=640" class="img-fluid" alt="" />
       </div>
      </div>
      <!--end testimonial single-->
@@ -441,7 +472,7 @@
   <!--start footer-->
   <footer id="footer">
    <div class="container">
-    <p>Copy &copy; 2021. All Rights Reserved By <a href="#">HG网络团队官网</a></p>
+    <p>Copy &copy; 2021. All Rights Reserved By <a href="#">Ciscon Club</a></p>
    </div>
   </footer>
   <!--end footer-->
